// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/drafts/drafts_row should match snapshot for channel draft 1`] = `
<ContextProvider
  value={
    Object {
      "getServerState": undefined,
      "identityFunctionCheck": "once",
      "stabilityCheck": "once",
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Object {
        "addNestedSub": [Function],
        "getListeners": [Function],
        "handleChangeWrapper": [Function],
        "isSubscribed": [Function],
        "notifyNestedSubs": [Function],
        "trySubscribe": [Function],
        "tryUnsubscribe": [Function],
      },
    }
  }
>
  <Memo(DraftRow)
    displayName="test"
    isRemote={false}
    item={Object {}}
    status={Object {}}
    user={Object {}}
  />
</ContextProvider>
`;

exports[`components/drafts/drafts_row should match snapshot for thread draft 1`] = `
<ContextProvider
  value={
    Object {
      "getServerState": undefined,
      "identityFunctionCheck": "once",
      "stabilityCheck": "once",
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Object {
        "addNestedSub": [Function],
        "getListeners": [Function],
        "handleChangeWrapper": [Function],
        "isSubscribed": [Function],
        "notifyNestedSubs": [Function],
        "trySubscribe": [Function],
        "tryUnsubscribe": [Function],
      },
    }
  }
>
  <Memo(DraftRow)
    displayName="test"
    draft={
      Object {
        "rootId": "some_id",
      }
    }
    isRemote={false}
    item={Object {}}
    status={Object {}}
    user={Object {}}
  />
</ContextProvider>
`;
